in certain situations; this is now corrected.

* Theory "HOL.Nat": Added Kleene's Fixed Point Theorem for lfp.

* Theory "HOL-Library.Code_Target_Bit_Shifts" incorporated into
HOL-Main. Minor INCOMPATIBILITY.

* If theory "HOL-Library.Code_Target_Nat" is imported, bit operations on
nat are implemented by bit operations on target-language integers. Minor
INCOMPATIBILITY.

* SMT:
  - Added Vampire as an experimental SMT solver (vampire_smt_dt has native
    support for datatypes and vampire_smt_nodt does not).
  - Added SMT solver "dummy_smtlib" which immediately fails; this is useful
    when generating SMT-LIB files with Mirabelle.
  - Splitted option "smt_debug_files" into "smt_problem_dest_dir" and
    "smt_proof_dest_dir". Minor INCOMPATIBILITY.

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      mono_on_invE
      mono_on_strict_invE
      monotone_on_inf_fun
      monotone_on_sup_fun
      strict_mono_on_eq
      strict_mono_on_less
      strict_mono_on_less_eq
  - Removed lemmas. Minor INCOMPATIBILITY.
      mono_on_greaterD (use mono_invE instead)
      subset_inj_on (use inj_on_subset)

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use
    the formula "r \<subset> A \<times> A \<and> refl_on A r". INCOMPATIBILITY.
  - Removed predicate single_valuedp. Use predicate right_unique instead.
    INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      antisym_bot[simp] (use antisymp_on_bot instead)
      antisym_empty[simp] (use antisym_on_bot instead)
      reflp_mono (use reflp_on_mono_strong instead)
      trans_empty[simp] (use trans_on_bot instead)
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      refl_on_empty[simp]
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisymp_equality[simp] ~> antisymp_on_equality[simp]